--- a/Kundenportal/index.html
+++ b/Kundenportal/index.html
@@ -5,185 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kundenportal Autovermietung</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url('hintergrundbild.jpg'); /* Hintergrundbild einfügen */
-            background-size: cover; /* Bildgröße anpassen */
-            background-repeat: no-repeat; /* Wiederholung des Bildes verhindern */
-            background-attachment: fixed; /* Hintergrundbild fixieren */
-            background-color: rgba(244, 244, 244, 0.2); /* Transparente Hintergrundfarbe */
-            color: #333;
-
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #555;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav .link-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-        }
-
-        nav a:hover {
-            background-color: #777;
-        }
-
-        section {
-            padding: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .link {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-        }
-
-        .link:hover {
-            background-color: #777;
-        }
-
-        .button {
-            display: inline-block;
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-
-        .input-field {
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            width: calc(100% - 22px); /* Adjusted width for better spacing */
-            box-sizing: border-box;
-        }
-
-        .input-title {
-            font-weight: bold;
-            margin-bottom: 10px;
-            font-size: 1.1em; /* Increased font size for emphasis */
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-            padding-top: 60px;
-        }
-
-        .modal-content {
-            background-color: #fefefe;
-            margin: 5% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            border-radius: 5px;
-        }
-
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .content {
-            padding: 20px;
-            border-bottom: 1px solid #ccc;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
 <header>
     <h1 id="pageTitle">Willkommen im Kundenportal</h1>
 </header>
-
 <nav>
 </nav>
-
 <section id="mainContent" class="container">
     <div class="content">
-    <h2>Herzlich Willkommen bei der Autovermietung!</h2>
-    <p>Hier können Sie Fahrzeuge buchen, Ihre aktuellen Buchungen einsehen und Ihr Profil verwalten.</p>
+        <h2>Herzlich Willkommen bei der Autovermietung!</h2>
+        <p>Hier können Sie Fahrzeuge buchen, Ihre aktuellen Buchungen einsehen und Ihr Profil verwalten.</p>
 
-    <form action="login.php" method="POST">
-        <input type="text" name="benutzername" class="input-field" placeholder="Benutzername" required>
-        <br>
-        <input type="password" name="passwort" class="input-field" placeholder="Passwort" required>
-        <br>
-        <button type="submit" class="button">Anmelden</button>
-        <button onclick="window.location.href='registrierung.html'" class="button">Registrieren</button>
-    </form>
+        <form action="login.php" method="POST">
+            <input type="text" name="benutzername" class="input-field" placeholder="Benutzername" required>
+            <br>
+            <input type="password" name="passwort" class="input-field" placeholder="Passwort" required>
+            <br>
+            <button type="submit" class="button">Anmelden</button>
+            <button onclick="window.location.href='registrierung.html'" class="button">Registrieren</button>
+        </form>
     </div>
 </section>
 
