--- a/Kundenportal/registrierung.html
+++ b/Kundenportal/registrierung.html
@@ -13,7 +13,7 @@
 
 <nav>
     <div class="link-container">
-        <a href="index.html" class="link">Startseite</a>
+        <a href="login.html" class="link">Startseite</a>
         <!--<a href="#" class="link" onclick="toggleBearbeitungsmodus(); toggleTitel()">Daten ändern</a>-->
     </div>
 </nav>
