Benutzernamen bei Registrierung prüfen OK

--- a/Kundenportal/registrierung.html
+++ b/Kundenportal/registrierung.html
@@ -39,6 +39,7 @@
 
             <label for="benutzername">Benutzername</label><br>
             <input id="benutzername" name="benutzername" type="text" class="input-field" required><br>
+            <span id="username_error" style="color: red; display: none;">Benutzername existiert bereits. Bitte wählen Sie einen anderen Benutzernamen.<br></span>
 
             <label for="nachname">Nachname</label><br>
             <input name="nachname" id="nachname" type="text" class="input-field" required><br>
