Anpassung der Dateinamen im Kundenportal

--- a/Kundenportal/registrierung.html
+++ b/Kundenportal/registrierung.html
@@ -18,7 +18,7 @@
     </div>
 </nav>
 
-<form action="process_form.php" method="POST" id="registrierungsformular">
+<form action="logic_process_form.php" method="POST" id="registrierungsformular">
     <section id="mainContent" class="container">
         <nav>
             <a href="#" class="link" onclick="switchTab('benutzerdaten')">Benutzerdaten</a>
@@ -115,7 +115,7 @@
     <p>&copy; 2024 Autovermietung. Alle Rechte vorbehalten.</p>
 </footer>
 
-<script src="registrierungLogik.js"></script>
+<script src="uilogic_registrierung.js"></script>
 
 </body>
 </html>
