--- a/Kundenportal/login.html
+++ b/Kundenportal/login.html
@@ -19,7 +19,7 @@
         <h2>Herzlich Willkommen bei der Autovermietung!</h2>
         <p>Hier können Sie Fahrzeuge buchen, Ihre aktuellen Buchungen einsehen und Ihr Profil verwalten.</p>
 
-        <form action="login.php" method="POST">
+        <form action="logic_login.php" method="POST">
             <input type="text" name="benutzername" class="input-field" placeholder="Benutzername" required>
             <br>
             <input type="password" name="passwort" class="input-field" placeholder="Passwort" required>
