Passwort Vergessen Link eingerichtet. E-Mail wird beim klick versendet.

--- a/Kundenportal/login.html
+++ b/Kundenportal/login.html
@@ -24,7 +24,7 @@
             <br>
             <input type="password" name="passwort" class="input-field" placeholder="Passwort" required>
             <br>
-            <a href="passwortVergessen" onclick="window.location.href='logic_passwortMail.php'">Passwort vergessen?</a>
+            <a href="logic_passwortMail.php">Passwort vergessen?</a>
             <br>
             <button type="submit" class="button">Anmelden</button>
             <button onclick="window.location.href='registrierung.html'" class="button">Registrieren</button>
