--- a/Kundenportal/registrierung.html
+++ b/Kundenportal/registrierung.html
@@ -5,6 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrierung - Kundenportal Autovermietung</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Stil für das Modal */
+        .modal {
+            display: none; /* Standardmäßig versteckt */
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.5);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 600px;
+            text-align: center;
+            border-radius: 5px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <header>
@@ -57,8 +94,7 @@
             <input id="passwort_wiederholen" name="passwort_wiederholen" type="password" class="input-field" required><br>
 
             <span id="passwort_fehlermeldung" style="color: red; display: none;">Die eingegebenen Passwörter stimmen nicht überein. Bitte überprüfen Sie Ihre Eingaben.</span>
-            <span id="passwort_uebereinstimmung"
-                  style="color: green; display: none;">Die Passwörter stimmen überein.</span>
+            <span id="passwort_uebereinstimmung" style="color: green; display: none;">Die Passwörter stimmen überein.</span>
 
             <div id="firmaContainer" style="display: none;">
                 <label for="firmenname">Firma: </label>
@@ -83,7 +119,7 @@
             <label for="telefonnummer">Telefonnummer:</label><br>
             <input name="telefonnummer" type="text" class="input-field" id="telefonnummer" required><br>
 
-            <label for="email">E-Mail:</label><br>
+            <label for="login.email">E-Mail:</label><br>
             <input id="login.email" name="email" type="email" class="input-field" required><br>
 
             <button type="button" class="button" onclick="switchTab('benutzerdaten')">Zurück</button>
@@ -110,6 +146,15 @@
         </div>
     </section>
 </form>
+
+<!-- Modal für Erfolgsmeldung -->
+<div id="successMessageModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeSuccessMessageModal()">&times;</span>
+        <p>Registrierung erfolgreich!</p>
+        <p>Vielen Dank für Ihre Registrierung.</p>
+    </div>
+</div>
 
 <footer>
     <p>&copy; 2024 Autovermietung. Alle Rechte vorbehalten.</p>
