Prüfung nach MA-Login: Verlwatung oder Marketing (Verlinkung Grafana auf Marketingseite)

--- a/CRM-System/zugangAbteilungMarketing.html
+++ b/CRM-System/zugangAbteilungMarketing.html
@@ -165,6 +165,12 @@
         <button onclick="startUmsatzaktion()">Umsatzaktion</button>
         <button onclick="startABCAktion()">ABC Aktion</button>
     </div>
+    <!-- Auswertungen -->
+    <div id="auswertungen" class="content">
+        <div class="input-title">Auswertungen</div>
+        <button onclick="window.location.href='http://localhost:3000/d/ddptnazf4qfb4f/marketingauswertung-rabattcodes?orgId=1&from=1719830895671&to=17198524956716&kiosk'">Rabattcodes auswerten</button>
+        <button onclick="window.location.href='http://localhost:3000/d/fdq1g0tmlgs8wc/kundenauswertung?orgId=1&from=1719831068935&to=1719852668935&kiosk'">Kundenauswertung</button>
+    </div>
 </section>
 
 <footer>
